src/test/ui/kindck/kindck-inherited-copy-bound.curr.stderr
error[E0277]: the trait bound `std::boxed::Box<{integer}>: Foo` is not satisfied
  --> $DIR/kindck-inherited-copy-bound.rs:21:16
   |
LL | fn take_param<T:Foo>(foo: &T) { }
   |                 --- required by this bound in `take_param`
...
LL |     take_param(&x);
   |                ^^ the trait `std::marker::Copy` is not implemented for `std::boxed::Box<{integer}>`
   |
   = note: required because of the requirements on the impl of `Foo` for `std::boxed::Box<{integer}>`

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/kindck-inherited-copy-bound.rs:28:19
   |
LL | trait Foo : Copy {
   |       ---   ---- ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
...
LL |     let z = &x as &dyn Foo;
   |                   ^^^^^^^^ the trait `Foo` cannot be made into an object

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/kindck-inherited-copy-bound.rs:28:13
   |
LL | trait Foo : Copy {
   |       ---   ---- ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
...
LL |     let z = &x as &dyn Foo;
   |             ^^ the trait `Foo` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<&dyn Foo>` for `&std::boxed::Box<{integer}>`
   = note: required by cast to type `&dyn Foo`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0038, E0277.
For more information about an error, try `rustc --explain E0038`.
